--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,26 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer utilities {
+  .wp-content h2{
+    @apply text-2xl font-bold text-black mb-5;
+  }
+  .wp-content h3{
+    @apply text-xl font-bold text-black mt-5 mb-2;
+  }
+  .wp-content ul{
+    @apply list-disc ml-5;
+  }
+  .wp-content p,
+  .wp-content ul{
+    @apply mb-5;
+  }
+  .wp-content strong{
+    @apply font-semibold;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+html {
+  box-sizing: border-box;
+  color: #041225;
+  font-family: 'Outfit';
 }
+
+
+
